--- a/featuredProjectPages/proj-cityOfBelonging.html
+++ b/featuredProjectPages/proj-cityOfBelonging.html
@@ -166,12 +166,13 @@
                                 City, People, and Culture
                             </span>
                         </h2>
-                        <img src="../assets/proj-belonging/elements/cityPerception.png" alt="data">
+                        <img src="../assets/proj-belonging/elements/cityPerception.png" alt="city perception">
                     </div>
                     <div class="wrap2content-1">
                         <h2 class="sub-subTitle">Acculturation complexity model (ACM)</h2>
                         <br><br>
-                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="data">
+                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
+                        <img src="../assets/proj-belonging/elements/solution.png" alt="acm model">
                         <p class="remark" style="font-size:0.08em"> Ettehad, Sheida, et al. “The Role of Culture in
                             Promoting Architectural
                             Identity.” European Online Journal of Natural
@@ -299,8 +300,9 @@
                 <img src="../assets/proj-belonging/elements/FinalUI.png" alt="Final UI">
 
             </div>
-
             <!-- section ends -->
+
+
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
