--- a/featuredProjectPages/proj-etherealAlchemy.html
+++ b/featuredProjectPages/proj-etherealAlchemy.html
@@ -141,6 +141,27 @@
             </div>
 
             <div class="subSection">
+                <h2 class="subTitle">Problem</h2>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-3">
+                        <p>
+                            With my observations, I noticed:<br>
+                            <br>
+                            - A growing demand for depression treatment.<br>
+                            - An increasing number of people seeking emotional healing through virtual spaces.<br>
+                            <br>
+                            These trends reflect a continuing mental health crisis, which is further supported by data.
+                        </p>
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-ethereal/data.png" alt="Model of Design">
+                    </div>
+                </div>
+                <a href="#section-researchPaper" style="padding: 20px">Know more about the research</a>
+            </div>
+
+
+            <div class="subSection">
                 <h2 class="subTitle">Theoretical Model for Design</h2>
                 <div class="wrapcontainer">
                     <div class="wrap2content-1">
