update-desert project

--- a/featuredProjectPages/proj-cityOfBelonging.html
+++ b/featuredProjectPages/proj-cityOfBelonging.html
@@ -114,7 +114,7 @@
                     <div class="wrap2content-1">
                         <p>Living as an expatriate in the multicultural city of <strong>New York</strong> and in
                             <strong>Abu Dhabi</strong>, my own living experiences and my interactions with the diverse
-                            community led me to ask：
+                            community led me to ask:
                         </p>
                     </div>
                     <div class="wrap2content-1">
@@ -150,8 +150,6 @@
                 <div class="video">
                     <iframe src="https://www.youtube.com/embed/1BszbTQpkJQ" frameborder="0" allowfullscreen></iframe>
                 </div>
-
-
             </div>
             <!-- section ends -->
 
@@ -167,11 +165,14 @@
                             </span>
                         </h2>
                         <img src="../assets/proj-belonging/elements/cityPerception.png" alt="city perception">
+                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
                     </div>
                     <div class="wrap2content-1">
                         <h2 class="sub-subTitle">Acculturation complexity model (ACM)</h2>
                         <br><br>
                         <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
+                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
+                        <img src="../assets/proj-belonging/elements/cityPerception.png" alt="city perception">
                         <p class="remark" style="font-size:0.08em"> Ettehad, Sheida, et al. “The Role of Culture in
                             Promoting Architectural
                             Identity.” European Online Journal of Natural
