--- a/featuredProjectPages/proj-descendantOfTheDesert.html
+++ b/featuredProjectPages/proj-descendantOfTheDesert.html
@@ -85,7 +85,7 @@
                             Jiapei Yao, Liuliu Zhu, Shiyuan Tian, Xiaoyan Zhou
                             <strong>Role: </strong>
                             Collaborate on Research and Concept Development, Final Fabrication and Assemble ,
-                            Documentation and Filming.
+                            Documentation and Filming.<br>
                             Specifically focused on Overall Design, Technical Implementation of Waist Motor and Spine
                             Bending Movement, Video Design.
                         </p>
@@ -112,49 +112,138 @@
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Problem</h2>
 
-            <!-- Gallery starts -->
-            <div class="description">
-                <p>In a speculative future, where environmental degradation and technological advancements lead to the
-                    transformation of individuals into cyborgs, surviving in a desolate desert becomes a reality.
-                    Biomechanically and physiologically, "Descendant of the Desert" presents an Exoskeleton x Spine,
-                    integrating multiple sensors and actuators to enhance human perception and interaction with the
-                    environment. In collaboration with research and concept development, I am in charge of designing,
-                    sketching, and addressing the technical aspects, and also specifically focusing on implementing the
-                    waist motor and bringing the spine bending movement to realization. Assembled and tailored
-                    collaboratively, this potential human evolution sparks contemplation on the degradation of human
-                    sensory information and free will due to technological advancements, where machine algorithms may
-                    substitute human free will and decision-making.</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/w04F4XPDW8c" frameborder="0" allowfullscreen></iframe>
-            </div>
+                <p class="caption" style="margin-bottom: -10px; margin-bottom: 20px">In An Speculated Future Of Extreme
+                    Desertification
+                    Dystopia</p>
+                <img src="../assets/proj-desert/elements/speculation.png" alt="data" width="150">
 
-            <div class="wrapcontainer">
-                <div class="wrap3content-1">
-                    <img class="keyImg" src="../assets/proj-desert/keyImage/key1.JPG" alt="Image 1">
-                </div>
-                <div class="wrap3content-1">
-                    <img class="keyImg" src="../assets/proj-desert/keyImage/key2.png" alt="Image 2">
-                </div>
-                <div class="wrap3content-1">
-                    <img class="keyImg" src="../assets/proj-desert/keyImage/key3.JPG" alt="Image 3">
-                </div>
+                <p class="subTitle" style="color:black">
+                    Research Questions: <br>
+                    1. How can humans survive in extreme environments without relying on physical shelters? <br>
+                    2. What are the consequences of cybernetic enhancements on the human body?
+                </p>
             </div>
-            <!-- Gallery ends -->
+            <!-- section ends -->
 
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
 
             <!-- section starts -->
             <div class="subSection">
-                <img class="portfolioImage" src="../assets/proj-desert/portfolioImage/0.jpg" alt="Image 3">
-                <img class="portfolioImage" src="../assets/proj-desert/portfolioImage/1.jpg" alt="Image 3">
-                <img class="portfolioImage" src="../assets/proj-desert/portfolioImage/2.jpg" alt="Image 3">
-                <img class="portfolioImage" src="../assets/proj-desert/portfolioImage/3.jpg" alt="Image 3">
-                <img class="portfolioImage" src="../assets/proj-desert/portfolioImage/4.jpg" alt="Image 3">
+                <h2 class="subTitle">Design Outcome</h2>
+                <p class="caption" style="margin-left: 20px; margin-right: 20px;">
+                    A conceptual wearable device that presents a new human biomorph, allowing humans to survive in the
+                    desert without taking refuge from physical dependencies.
+                </p>
+                <div class="wrapcontainer">
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/proj-desert/keyImage/key1.JPG" alt="Image 1">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/proj-desert/keyImage/key2.png" alt="Image 2">
+                    </div>
+                    <div class="wrap3content-1">
+                        <img class="keyImg" src="../assets/proj-desert/keyImage/key3.JPG" alt="Image 3">
+                    </div>
+                </div>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/w04F4XPDW8c" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <br><br>
+                <img class="keyImg" src="../assets/proj-desert/elements/outcome.png" alt="Image 1">
             </div>
             <!-- section ends -->
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Research Insight</h2>
+                <p class="caption">Bioinspiration:Referencing Exoskeleton
+                    from the Desert Scorpion</p>
+                <p style="font-size: 1.2em">
+                    How can we adapt to nature without relying on physical shelters and instead seamlessly integrate
+                    with the natural
+                    environment?<br>
+                    like …… insects
+                </p>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/spine.png" alt="Image">
+                    </div>
+                    <div class="wrap2content-3">
+                        <img src="../assets/proj-desert/elements/sketch.png" alt="Image">
+                    </div>
+                </div>
+
+
+                <p class="caption">Instinct & Freewill Discussion</p>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/freewill1.png" alt="Image">
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/freewill2.png" alt="Image">
+                    </div>
+                </div>
+                <p class="subTitle" style="color:black" style="font-size: 1.2em">
+                    As technology integrates into the human body, it begins to influence decision-making and behavior,
+                    with algorithms and
+                    programming gradually replacing certain aspects of free will. In a future where humans evolve into
+                    cyborgs, with
+                    biological organs replaced by technological enhancements, partial free will is sacrificed.
+                </p>
+            </div>
+            <!-- section ends -->
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Design</h2>
+                <div class="wrap2content-1">
+                    <img src="../assets/proj-desert/elements/design.png" alt="Image">
+                </div>
+            </div>
+            <!-- section ends -->
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Fabrication and Development</h2>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/dev1.png" alt="Image">
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/dev2.png" alt="Image">
+                    </div>
+                </div>
+            </div>
+            <!-- section ends -->
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Final Outcome</h2>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/keyImage/bent.png" alt="Image">
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/keyImage/walk.png" alt="Image">
+                    </div>
+                </div>
+            </div>
+            <!-- section ends -->
+
+
+            <div class="wrap3content-1">
+                <img src="../assets/proj-desert/elements/exih.jpg" alt="Image">
+            </div>
+
+
+            <!-- --------------------------------------------------------------------------------- -->
+            <!-- --------------------------------------------------------------------------------- -->
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
