--- a/featuredProjectPages/proj-descendantOfTheDesert.html
+++ b/featuredProjectPages/proj-descendantOfTheDesert.html
@@ -82,7 +82,7 @@
                             laser Cutting<br>
                             <br>
                             <strong>Group Project</strong><br>
-                            Jiapei Yao, Liuliu Zhu, Shiyuan Tian, Xiaoyan Zhou
+                            Jiapei Yao, Liuliu Zhu, Shiyuan Tian, Xiaoyan Zhou<br>
                             <strong>Role: </strong>
                             Collaborate on Research and Concept Development, Final Fabrication and Assemble ,
                             Documentation and Filming.<br>
@@ -168,14 +168,7 @@
                     environment?<br>
                     like …… insects
                 </p>
-                <div class="wrapcontainer">
-                    <div class="wrap2content-1">
-                        <img src="../assets/proj-desert/elements/spine.png" alt="Image">
-                    </div>
-                    <div class="wrap2content-3">
-                        <img src="../assets/proj-desert/elements/sketch.png" alt="Image">
-                    </div>
-                </div>
+                <img src="../assets/proj-desert/elements/research.png" alt="Image">
 
 
                 <p class="caption">Instinct & Freewill Discussion</p>
@@ -235,11 +228,31 @@
                 </div>
             </div>
             <!-- section ends -->
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Showcases & Behind the Scene</h2>
+                <p>Dec 2022 @ NYUAD Interactive Media Show</p>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/exih.jpg" alt="Image">
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/exih2.jpg" alt="Image">
+                    </div>
+                </div>
 
+                <p>Nov 2022 On-site Installation and Filming @ Sweihan Desert, Abu Dhabi</p>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/behind1.jpg" alt="Image">
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-desert/elements/behind2.png" alt="Image">
+                    </div>
+                </div>
 
-            <div class="wrap3content-1">
-                <img src="../assets/proj-desert/elements/exih.jpg" alt="Image">
             </div>
+            <!-- section ends -->
 
 
             <!-- --------------------------------------------------------------------------------- -->
