update for job hunting

--- a/featuredProjectPages/proj-cityOfBelonging.html
+++ b/featuredProjectPages/proj-cityOfBelonging.html
@@ -165,14 +165,11 @@
                             </span>
                         </h2>
                         <img src="../assets/proj-belonging/elements/cityPerception.png" alt="city perception">
-                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
                     </div>
                     <div class="wrap2content-1">
                         <h2 class="sub-subTitle">Acculturation complexity model (ACM)</h2>
                         <br><br>
-                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
-                        <img src="../assets/proj-belonging/elements/cityPerception.png" alt="city perception">
-                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="acm model">
+                        <img src="../assets/proj-belonging/elements/ACMmodel.png" alt="acm model">
                         <p class="remark" style="font-size:0.08em"> Ettehad, Sheida, et al. “The Role of Culture in
                             Promoting Architectural
                             Identity.” European Online Journal of Natural
@@ -302,8 +299,11 @@
             </div>
             <!-- section ends -->
 
-
-
+            <div class="subSection">
+                <h2 class="subTitle">Award</h2>
+                2023 Golden Block International Design Award (Outstanding Award) Nov 2023
+                Submitted Work: City of Belonging, New Media Creative Entries
+            </div>
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
 
