--- a/index.html
+++ b/index.html
@@ -76,13 +76,32 @@
         <div class="all-content">
             <p class="featuredProjects-Title">Featured Projects</p>
             <div class="featured-projects">
-                <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
+                <a class="feature-proj-block" href="featuredProjectPages/proj-cityOfBelonging.html">
                     <div class="container-proj1">
-                        <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
+                        <img src="assets/indexPage/coverImage/belonging.png" alt="Sample Image"
                             class="hover-image-proj1">
                         <div class="hover-text-proj1">
+                            <h3 class="feature-project-title">City Of Belonging</h3>
+                            <p class="feature-project-tages">UI/UX Design | AR Development<br>2023 | Individual Work</p>
+                            <p class="feature-proj-description">An augmented reality-powered mobile application,
+                                revolutionizing the way individuals from diverse cultural backgrounds navigate new
+                                territories, and build their sense of belonging. </p>
+                        </div>
+
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Ethereal Alchemy</p>
+                </div>
+
+                <!-- ----------------------------------------------- -->
+                <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
+                    <div class="container-proj2">
+                        <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
+                            class="hover-image-proj2">
+                        <div class="hover-text-proj2">
                             <h3 class="feature-project-title">Ethereal Alchemy</h3>
-                            <p class="feature-project-tages">Interactive Projection<br>2023 | Individual
+                            <p class="feature-project-tages">Motion Capture | Computing <br>2023 | Individual
                                 Work</p>
                             <p class="feature-proj-description">An emotional healing experience helping the audience
                                 to
@@ -92,14 +111,13 @@
                     </div>
                 </a>
                 <div class="touchScreenDisplay">
-                    <p class="TS-feature-project-title">Ethereal Alchemy</p>
+                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
                 </div>
-
                 <!-- ----------------------------------------------- -->
                 <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
-                    <div class="container-proj2">
-                        <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj2">
-                        <div class="hover-text-proj2">
+                    <div class="container-proj3">
+                        <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj3">
+                        <div class="hover-text-proj3">
                             <h3 class="feature-project-title">Descendant Of The Desert</h3>
                             <p class="feature-project-tages">Wearable Interactive Installation<br>2022 | Group Work</p>
                             <p class="feature-proj-description">A speculative human biomorph that enables us to
@@ -109,27 +127,10 @@
                     </div>
                 </a>
                 <div class="touchScreenDisplay">
-                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
-                </div>
-                <!-- ----------------------------------------------- -->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-cityOfBelonging.html">
-                    <div class="container-proj3">
-                        <img src="assets/indexPage/coverImage/belonging.png" alt="Sample Image"
-                            class="hover-image-proj3">
-                        <div class="hover-text-proj3">
-                            <h3 class="feature-project-title">City Of Belonging</h3>
-                            <p class="feature-project-tages">UI/UX Design | AR Development<br>2023 | Individual Work</p>
-                            <p class="feature-proj-description">An augmented reality-powered mobile application,
-                                revolutionizing the way individuals from diverse cultural backgrounds navigate new
-                                territories, and build their sense of belonging. </p>
-                        </div>
-                    </div>
-                </a>
-                <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">City Of Belonging</p>
                 </div>
                 <!-- ----------------------------------------------- -->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
                     <div class="container-proj4">
                         <img src="assets/indexPage/coverImage/letter.png" alt="Sample Image" class="hover-image-proj4">
                         <div class="hover-text-proj4">
@@ -145,9 +146,9 @@
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">The Lost Letter</p>
-                </div>
+                </div> -->
                 <!-- ----------------------------------------------- -->
-                <a class="feature-proj-block" href="featuredProjectPages/proj-disconnect.html">
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-disconnect.html">
                     <div class="container-proj5">
                         <img src="assets/indexPage/coverImage/disconnect.png" alt="Sample Image"
                             class="hover-image-proj5">
@@ -162,7 +163,7 @@
                 </a>
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">Disconnect</p>
-                </div>
+                </div> -->
                 <!-- ----------------------------------------------- -->
                 <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
