update proj true dream home

--- a/index.html
+++ b/index.html
@@ -129,6 +129,27 @@
                 <div class="touchScreenDisplay">
                     <p class="TS-feature-project-title">City Of Belonging</p>
                 </div>
+
+
+                <!-- ----------------------------------------------- -->
+                <a class="feature-proj-block" href="featuredProjectPages/proj-trueDreamHome.html">
+                    <div class="container-proj4">
+                        <img src="assets/proj-home/home-feature.png" alt="Cover Image" class="hover-image-proj4">
+                        <div class="hover-text-proj4">
+                            <h3 class="feature-project-title">True Dream Home</h3>
+                            <p class="feature-project-tages">UX design | VR development | Gaming <br>2023 |
+                                Group Work
+                            </p>
+                            <p class="feature-proj-description">
+                                A VR-elevated mobile home design gaming experience, immersing users in personalized
+                                interior design within their ideal location through virtual reality
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">The Lost Letter</p>
+                </div>
                 <!-- ----------------------------------------------- -->
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
                     <div class="container-proj4">
