--- a/featuredProjectPages/proj-amoeba.html
+++ b/featuredProjectPages/proj-amoeba.html
@@ -160,11 +160,11 @@
                     </div>
                     <div class="wrap3content-1">
                         <img class="keyImg" src="../assets/proj-amoeba/demoOutput/barPrompt.png"
-                            style="object-fit: contain" alt="Image 4">
+                            style="object-fit: contain" alt="barPrompt">
                     </div>
                     <div class="wrap3content-1">
                         <img class="keyImg" src="../assets/proj-amoeba/demoOutput/beachPrompt.png"
-                            style="object-fit: contain" alt="Image 5">
+                            style="object-fit: contain" alt="beachPrompt">
                     </div>
                     <div class="wrap3content-1">
                         <img class="keyImg" src="../assets/proj-amoeba/demoOutput/tatamiPrompt.png"
